--- a/trunk/tests/Makefile.am
+++ b/trunk/tests/Makefile.am
@@ -8,7 +8,7 @@ uri_testsuite_SOURCES = uri_testsuite.cpp
 uri_testsuite_LDFLAGS = -lboost_unit_test_framework -lboost_thread
 
 parse_uri_SOURCES = parse_uri.cpp
-parse_uri_LDFLAGS = -lboost_program_options -lboost_thread
+parse_uri_LDFLAGS = -lboost_thread
 
 EXTRA_DIST = \
         package.m4 \
