Use GNU Argp instead of Boost.ProgramOptions. ProgramOptions in Boost 1.33.1 has a bug that prevents programs from having options that start with the same sequence of characters followed by a dash (e.g., "--foo" and "--foo-bar").

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -8,7 +8,7 @@ uri_testsuite_SOURCES = uri_testsuite.cpp
 uri_testsuite_LDFLAGS = -lboost_unit_test_framework -lboost_thread
 
 parse_uri_SOURCES = parse_uri.cpp
-parse_uri_LDFLAGS = -lboost_program_options -lboost_thread
+parse_uri_LDFLAGS = -lboost_thread
 
 EXTRA_DIST = \
         package.m4 \
