Generate ChangeLog at dist time with svn2cl.

--- a/configure.ac
+++ b/configure.ac
@@ -5,5 +5,5 @@ AC_CONFIG_FILES([Makefile]
                 [tests/atlocal])
 AC_CONFIG_TESTDIR([tests])
 AC_PROG_CXX
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([foreign])
 AC_OUTPUT
