--- a/Makefile.am
+++ b/Makefile.am
@@ -1,1 +1,5 @@
 SUBDIRS = src tests
+
+dist-hook:
+	cd $(top_srcdir) && svn2cl --strip-prefix=trunk --group-by-day
+	cp $(top_srcdir)/ChangeLog $(distdir)
