--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -1,5 +1,7 @@
 SUBDIRS = src tests
 
 dist-hook:
-	cd $(top_srcdir) && svn2cl --strip-prefix=trunk --group-by-day
-	cp $(top_srcdir)/ChangeLog $(distdir)
+	if test -d $(top_srcdir)/.svn; then \
+    (cd $(top_srcdir); svn2cl --strip-prefix=trunk --group-by-day); \
+    cp $(top_srcdir)/ChangeLog $(distdir); \
+fi
