--- a/trunk/tests/Makefile.am
+++ b/trunk/tests/Makefile.am
@@ -1,4 +1,7 @@
-AM_CPPFLAGS = -I$(top_srcdir)/src -DBOOST_SPIRIT_THREADSAFE
+AM_CPPFLAGS = \
+        -I$(top_srcdir)/src \
+        -DBOOST_SPIRIT_THREADSAFE \
+        -DBOOST_TEST_DYN_LINK
 TESTS_ENVIRONMENT = BOOST_TEST_REPORT_LEVEL=detailed
 TESTS = uri-testsuite
 
