--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -9,7 +9,8 @@ check_PROGRAMS = parse-uri
 parse_uri_SOURCES = parse_uri.cpp
 parse_uri_LDADD = \
         -lboost_program_options$(BOOST_LIB_SUFFIX) \
-        -lboost_thread$(BOOST_LIB_SUFFIX)
+        -lboost_thread$(BOOST_LIB_SUFFIX) \
+        -lboost_system$(BOOST_LIB_SUFFIX)
 
 EXTRA_DIST = \
         package.m4 \
